# pharma-catalyst

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  test_api_key.py
.claude/: settings.local.json
.claude/commands/: discard.md  promote.md  report.md  research.md  run.md
.claude/skills/: discard.md  promote.md  run.md
.claude/skills/catalyst-pharma/: SKILL.md
.claude/skills/scientific/: tooluniverse.md
.claude/skills/tooluniverse-adverse-event-detection/: test_adverse_event_detection.py
.claude/skills/tooluniverse-binder-discovery/: EXAMPLES.md  TOOLS_REFERENCE.md
.claude/skills/tooluniverse-chemical-compound-retrieval/: examples.md
.claude/skills/tooluniverse-chemical-safety/: test_skill.py
.claude/skills/tooluniverse-clinical-trial-design/: .env.template  trial_pipeline.py
.claude/skills/tooluniverse-clinical-trial-matching/: test_skill.py
.claude/skills/tooluniverse-drug-drug-interaction/: DDI_report_simvastatin_ketoconazole.md  DDI_report_warfarin_amoxicillin.md  ddi_pipeline.py  ddi_working_example.py
.claude/skills/tooluniverse-drug-repurposing/: EXAMPLES.md  REFERENCE.md
.claude/skills/tooluniverse-drug-research/: EXAMPLES.md
.claude/skills/tooluniverse-drug-target-validation/: test_skill.py
.claude/skills/tooluniverse-literature-deep-research/: EXAMPLES.md  QUICK_REFERENCE.md
.claude/skills/tooluniverse-network-pharmacology/: test_network_pharmacology.py
.claude/skills/tooluniverse-pharmacovigilance/: EXAMPLES.md  TOOLS_REFERENCE.md
.claude/skills/tooluniverse-target-research/: EXAMPLES.md
docs/: AGENTS.md  ARCHITECTURE.md  FIX_PLAN.md  MEMORY.md  RAG.md  REVIEW_CREWAI.md  REVIEW_PYTHON.md  TOOLS.md  agents.md  decisions.md
docs/archives/: plan-tooluniverse.md
docs/plans/: rag-knowledge-base.md
docs/reviews/: REVIEW_2025-03-15_consolidated.md  REVIEW_AUTOGEN_PANEL.md  REVIEW_CREWAI.md  REVIEW_PYTHON.md  REVIEW_rag_knowledge_base.md  feature-autogen-review-panel.md  resilience-audit.md
experiments/: baseline.json  baseline_train.py  experiments.jsonl  memory.json  train.py
experiments/bbbp/: README.md  baseline.json  baseline_train.py  memory.json  train.py
experiments/bbbp/knowledge_base/: index.json
experiments/bbbp/knowledge_base/sops/: ml_model_validation_sop.md
experiments/bbbp/literature/: index.json
experiments/clintox/: README.md  baseline.json  memory.json  tool_config.yaml  train.py
experiments/clintox/knowledge_base/: index.json
experiments/clintox/literature/: index.json
experiments/clintox/literature_old/: index.json
experiments/run_001/: run_001.md  run_001.py
experiments/solubility/: README.md  baseline.json  baseline_train.py  memory.json  train.py
experiments/solubility/knowledge_base/: index.json
mock_server/: README.md  canned_responses.py  server.py
scripts/: benchmark_embeddings.py  pdf_extraction_compare.py  pdf_tool_prototype.py
scripts/pdf_outputs/: 2507.18557v3_pymupdf.md  2507.18557v3_pymupdf4llm.md
src/pharma_agents/: __init__.py  agents.yaml  crew.py  discard.py  ingest_kb.py  log_utils.py  main.py  memory.py  promote.py  report.py  research.py  review_agents.yaml  review_config.py  review_panel.py  tasks.yaml  tool_config.py  tool_defaults.yaml
src/pharma_agents/data/: __init__.py  esol.csv  fetch.py
src/pharma_agents/tools/: __init__.py  arxiv.py  baseline_train.py  custom_tools.py  evaluate.py  knowledge_base.py  literature.py  reset.py  skills.py  tooluniverse.py  training.py
tests/: conftest.py  test_crew_split.py  test_evaluate.py  test_memory.py  test_review_panel.py  test_tools.py  test_training_tools.py
(+43 files in other folders)
