[project]
name = "pharma-agents"
version = "0.1.0"
description = "Autonomous multi-agent system for molecular property prediction"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "crewai[google-genai,litellm]>=0.95.0",
    "crewai-tools>=0.17.0",
    "google-genai>=1.0.0",
    "rdkit>=2024.3.1",
    "scikit-learn>=1.5.0",
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "python-dotenv>=1.1.1",
    "loguru>=0.7.3",
    "plotly>=6.6.0",
    "fastembed>=0.7.4",
    "sentence-transformers>=5.3.0",
    "lightgbm",
    "tensorflow-cpu>=2.20.0",
    "setuptools>=82.0.1",
    "xgboost>=3.2.0",
    "ag2[gemini]>=0.9.0",
    "torch>=2.10.0",
    "deepchem>=2.8.0",
    "catboost>=1.2.10",
    "pyyaml>=6.0.3",
]

[project.scripts]
pharma-agents = "pharma_agents.main:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pharma_agents"]

[dependency-groups]
dev = [
    "fastapi>=0.135.1",
    "pre-commit>=4.2.0",
    "pymupdf4llm>=0.2.9",
    "pyright>=1.1.408",
    "pytest>=9.0.2",
    "pytest-timeout>=2.4.0",
    "radon>=6.0.1",
    "ruff>=0.15.6",
    "ty>=0.0.23",
    "uvicorn>=0.41.0",
]

[tool.ruff.lint]
# Ignore unused variables in experiments (agent-generated code)
# F841: local variable assigned but never used
ignore = ["F841"]

[tool.ruff.lint.per-file-ignores]
"experiments/**/train.py" = ["F841", "E501"]  # Also allow long lines in agent code

[tool.pyright]
# CrewAI decorators have poor type annotations - exclude from strict checking
exclude = ["src/pharma_agents/crew.py"]
reportArgumentType = "warning"
reportAttributeAccessIssue = "warning"
